Make timelines bigger and fix spacing in profilerHeader

--- a/packages/pyroscope-flamegraph/src/ProfilerHeader.module.css
+++ b/packages/pyroscope-flamegraph/src/ProfilerHeader.module.css
@@ -6,8 +6,13 @@
 }
 
 /* Give same amount of space between all children */
-.navbar > *:not(:first-child):not(:last-child) {
-  margin: 0 8px;
+.navbar > *:not(:first-child) {
+  margin-left: 5px;
+  margin-right: 5px;
+
+  &.fit-mode-select {
+    min-width: 65px;
+  }
 }
 
 .space-filler {
@@ -30,11 +35,7 @@
 }
 
 .search-small {
-  width: 100px;
-}
-
-.fit-mode-select {
-  margin: 0 8px;
+  width: 170px;
 }
 
 .headerLogo {
